--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .header div ul {
-    list-style-type: none;
+    list-style-type:none;
 }
 
 .header div ul li {
@@ -87,12 +87,12 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
+/*.benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -101,13 +101,13 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefit-lead h3 {
+*/
+.benefit-lead h3, .benefit-brand h3 ,.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
+/*.benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -116,13 +116,13 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }
-
-.benefit-lead img {
+*/
+.benefit-lead img, .benefit-brand img, .benefit-cost img  {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*
 .benefit-brand img {
     display: block;
     margin: 10px auto;
@@ -134,7 +134,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+*/
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -162,10 +162,10 @@ p {
     color: #ffffff;
 }
 */
-.search-engine-optimization img {
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
-
+/*
 .online-reputation-management img {
     max-height: 200px;
 }
@@ -173,13 +173,13 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 }
-
-.search-engine-optimization h2 {
+*/
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2   {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
+/*.online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -199,3 +199,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+*/
