--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,4 +1,4 @@
-* {
+* { /*Universal Selector*/
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -87,54 +87,7 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-/*.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-*/
-.benefit-lead h3, .benefit-brand h3 ,.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-/*.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-*/
-.benefit-lead img, .benefit-brand img, .benefit-cost img  {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-/*
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-*/
+/*grouping selectors*/
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -143,60 +96,33 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-/*
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-*/
+/*grouping selectors*/
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
-/*
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-*/
+/*grouping selectors*/
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2   {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-/*.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+/*Changed benefit-lead, benefit-brand, benefit-cost to a common name "benefit-types" and 
+grouping selectors*/
+.benefit-types{
+    margin-bottom: 32px;
+    color: #ffffff; 
 }
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+ /*grouping selectors*/
+.benefit-types h3{
+    margin-bottom: 10px;
     text-align: center;
 }
-
-.footer h2 {
-    font-size: 20px;
+/*grouping selectors*/
+.benefit-types img{
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
 }
-*/
+.footer {
+    padding: 30px;
+    }
+
